hard-gists/5953776/run.log
=== Docker Run Log for 5953776 ===
Started at: Mi 29. Okt 16:10:52 CET 2025

[2025-10-29 16:10:52] START: Running container for 5953776
[2025-10-29 16:10:53] SUCCESS: Container d4e67a942235e7aa93882ca0846394245469d7aa6c6c44c22bd9693c6b0cfe58 started for 5953776
=== Container logs for 5953776 ===
  File "/snippet.py", line 62
    if t.tm_sec <> self.sec:
                ^^
SyntaxError: invalid syntax
=== End of logs for 5953776 ===
[2025-10-29 16:10:55] INFO: Container d4e67a942235e7aa93882ca0846394245469d7aa6c6c44c22bd9693c6b0cfe58 has stopped
